--- a/lib/handlers/package.json
+++ b/lib/handlers/package.json
@@ -11,12 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/client-s3": "^3.596.0",
     "@aws-sdk/client-lambda": "^3.682.0",
     "@aws-lambda-powertools/logger": "^2.9.0",
     "@aws-lambda-powertools/metrics": "^2.9.0",
     "@aws-lambda-powertools/tracer": "^2.9.0",
-    "axios": "^1.7.7"
+    "@pinecone-database/pinecone": "^2.2.2",
+    "axios": "^1.7.7",
+    "esbuild": "^0.21.5"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
