--- a/.github/workflows/ODMD_ragStore-CdkGithubWFus-east-2-workspace2.yaml
+++ b/.github/workflows/ODMD_ragStore-CdkGithubWFus-east-2-workspace2.yaml
@@ -32,7 +32,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
-      
+
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: 'arn:aws:iam::217471730138:role/ragStore/ragStore-us-east-2217471730138-buildRole'
+          aws-region: us-east-2
+
       - uses: ondemandenv/wflact-resolvEnvars@main
         with:
           aws_credentials: ${{github.event.inputs.aws_credentials}}
