--- a/.github/workflows/ODMD_ragStore-CdkGithubWFus-east-2-workspace2.yaml
+++ b/.github/workflows/ODMD_ragStore-CdkGithubWFus-east-2-workspace2.yaml
@@ -1,29 +1,14 @@
-#ODMD GENERATED WORKFLOW, don't change unless you are sure
+#ODMD 329d4bdadaff2a84daf3212e845dedcbf368621d GENERATED WORKFLOW, don't change unless you are sure.
 
 name: ODMD_ragStore-CdkGithubWFus-east-2-workspace2
 on:
   workflow_dispatch:
     inputs:
-      aws_credentials:
-        type: string
-        required: false
-        default: ''
-        description: | 
-          Your AWS credentials in the format:
-          [workspace2_Role/Profile]
-          aws_access_key_id=01234_id
-          aws_secret_access_key=56689_secret
-          aws_session_token=token0123456789
       message:
         type: string
         required: false
         default: ''
         description: 'additional message'
-      ghWflPpStackName:
-        type: string
-        required: false
-        default: ''
-        description: 'the stack to reload, ignored by default'
 jobs:
   odmd_job:
     runs-on: ubuntu-latest
@@ -38,7 +23,7 @@ jobs:
           role-to-assume: 'arn:aws:iam::217471730138:role/ragStore/ragStore-us-east-2217471730138-buildRole'
           aws-region: us-east-2
 
-      - uses: ondemandenv/wflact-resolvEnvars@main
+      - uses: ondemandenv/wflact-resolvEnvars@odmd-rag
         with:
           aws_credentials: ${{github.event.inputs.aws_credentials}}
           trigger_message: ${{github.event.inputs.message}}
@@ -74,7 +59,7 @@ jobs:
           ODMD_buildId: ragStore
           ODMD_SECRETS: ${{ secrets['ODMD_SECRETS_ODMD_ragStore_CdkGithubWFus_east_2_workspace2'] }}      
           
-      - uses: ondemandenv/wflact-buildProduces@main
+      - uses: ondemandenv/wflact-buildProduces@odmd-rag
         env:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           ODMD_buildId: ragStore
