--- a/lib/handlers/package.json
+++ b/lib/handlers/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "@odmd-rag/vector-storage-handlers",
+  "name": "@odmd-rag/vector-storage-service-handlers",
   "version": "1.0.0",
   "description": "Lambda handlers for RAG Vector Storage Service",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "dev": "tsc --watch",
-    "lint": "eslint src/**/*.ts",
-    "test": "jest"
+    "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-lambda-powertools/logger": "^2.9.0",
-    "@aws-lambda-powertools/metrics": "^2.9.0",
-    "@aws-lambda-powertools/tracer": "^2.9.0",
-    "@aws-sdk/client-lambda": "^3.682.0",
-    "@aws-sdk/client-s3": "^3.682.0",
-    "@pinecone-database/pinecone": "^6.1.1",
-    "axios": "^1.7.7"
+    "@aws-sdk/client-s3": "^3.832.0",
+    "@aws-sdk/client-sqs": "^3.831.0",
+    "@aws-sdk/client-ssm": "^3.832.0",
+    "@aws-sdk/client-sts": "^3.832.0",
+    "@odmd-rag/contracts-lib-rag": "file:../../../contractsLib-rag",
+    "@smithy/types": "^3.0.0",
+    "aws-lambda": "^1.0.7",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
-    "@types/node": "^22.7.5",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "eslint": "^9.12.0",
-    "jest": "^29.7.0",
-    "typescript": "^5.6.3"
+    "@types/node": "^22.5.4",
+    "@types/node-fetch": "^2.6.11",
+    "json-schema-to-typescript": "^13.1.2",
+    "json-schema-to-zod": "^2.1.0",
+    "typescript": "~5.6.2"
   },
   "engines": {
     "node": ">=18.0.0"
