--- a/lib/handlers/package.json
+++ b/lib/handlers/package.json
@@ -9,10 +9,13 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.832.0",
-    "@aws-sdk/client-sqs": "^3.832.0",
-    "@aws-sdk/client-ssm": "^3.832.0",
-    "@aws-sdk/client-sts": "^3.832.0",
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/client-sqs": "^3.848.0",
+    "@aws-sdk/client-ssm": "^3.849.0",
+    "@aws-sdk/client-sts": "^3.848.0",
+    "@aws-sdk/signature-v4": "^3.374.0",
+    "@aws-sdk/protocol-http": "^3.374.0",
+    "@aws-sdk/util-utf8": "^3.374.0",
     "aws-lambda": "^1.0.7",
     "node-fetch": "^3.3.2",
     "zod": "^3.23.8"
