--- a/lib/handlers/package.json
+++ b/lib/handlers/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/signature-v4": "^3.374.0",
     "@aws-sdk/protocol-http": "^3.374.0",
     "@aws-sdk/util-utf8": "^3.374.0",
+    "@aws-crypto/sha256-js": "^5.2.0",
     "aws-lambda": "^1.0.7",
     "node-fetch": "^3.3.2",
     "zod": "^3.23.8"
