--- a/lib/handlers/package.json
+++ b/lib/handlers/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "debug-sts": "ts-node debug-sts-auth.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.850.0",
@@ -17,6 +18,7 @@
     "@aws-sdk/protocol-http": "^3.374.0",
     "@aws-sdk/util-utf8": "^3.374.0",
     "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/credential-providers": "^3.848.0",
     "aws-lambda": "^1.0.7",
     "node-fetch": "^3.3.2",
     "zod": "^3.23.8"
@@ -27,6 +29,7 @@
     "@types/node-fetch": "^2.6.11",
     "json-schema-to-typescript": "^13.1.2",
     "json-schema-to-zod": "^2.1.0",
+    "ts-node": "^10.9.0",
     "typescript": "~5.6.2"
   },
   "engines": {
